# MultiAgentDiplomaticDebate

./: .gitignore  LICENSE  README.md  debate_log.txt  pyproject.toml  requirements.txt  run.py
data/country_profiles/: france.json  india.json  italy.json  japan.json  russia.json  ukraine.json
data/examples/: united_kingdom.json
data/scenarios/: demo.yaml
debate_simulation.egg-info/: PKG-INFO  SOURCES.txt
examples/output/greenland_demo/: audit.json  clauses.json  scorecards.json  sources.json  (+4 more)
examples/scenarios/: greenland.yaml
models/: builder.py
models/utils/: utils.py
profiles/: china.json  germany.json  united_states.json
prompts/: __init__.py  builder.py
prompts/utils/: validator.py
src/agents/: country_agent.py  diplomatic_response_validator.py  judge_agent.py  orchestrator.py
src/builder/: builder.py
src/legacy/: run.py
src/madd/: __init__.py  cli.py
src/memory/: steams.py  streams.py
src/models/: __init__.py
src/parsers/: parsers.py
src/prompts/: __init__.py  country_builder_prompt.py  diplomatic_response_prompt.py  judge_prompt.py  strategic_analysis_prompt.py
src/utils/: __init__.py  utils.py
src/validator/: validator.py
tests/: conftest.py  country_agent_test.py  diplomatic_response_test.py  judge_agent_test.py  streams_test.py  test_cli.py  test_country_citations.py  test_country_votes.py  test_graph_rounds.py  test_scenario_router.py  test_schemas.py  test_scoring_clause_accounting.py  test_stores.py  test_transcript.py  test_treaty_amendments.py  test_treaty_utils.py  test_truncation.py  test_ui.py  test_verifier.py  test_web_search.py
(+34 files in other folders)
